# vyuh-web

./: .dxstarter  .env.example  .firebaserc  .gitignore  Dockerfile  README.md  firebase.json  firestore.indexes.json  firestore.rules  kitt.yml  package-lock.json  package.json  pyproject.toml  sr.yaml  storage.rules
.firebase/: hosting.YnVpbGQ.cache  hosting.ZnJvbnRlbmQvYnVpbGQ.cache
.github/workflows/: firebase-hosting-merge.yml  firebase-hosting-pull-request.yml
backend/: Procfile  README.md  main.py  railway.json  requirements.txt  run.py
backend/routes/: agents.py  crew_builder.py
backend/runs/: c7f48bc8-96ed-40bb-be4e-71184ad3690d.txt
backend/src/vyuh/: __init__.py
backend/src/vyuh/tools/: loaders.py  orchestrator.py
frontend/: package-lock.json  package.json
frontend/public/: index.html
frontend/src/: App.css  App.js
frontend/src/components/: AgentCard.css  AgentCard.js  AgentCard.tsx  AgentRunner.css  AgentRunner.js  CrewBuilder.css  CrewBuilder.js  CrewBuilder.tsx  CrewCart.js
src/: App.css  App.js  App.js.backup  App.js.backup2  firebase.js  index.css  index.js
src/components/: AgentCard.css  AgentCard.tsx  Auth.js  CrewBuilder.js  CrewBuilder.js.backup  CrewBuilder.tsx  CrewCart.css  Dashboard.css  Dashboard.js  DashboardLayout.css  DashboardLayout.jsx  ForgotPassword.css  ForgotPassword.js  Landing.css  Landing.js  LandingPage.css  LandingPage.js  Layout.css  Layout.js  Login.css  Login.js  NotificationDemo.css  NotificationDemo.jsx  NotificationTest.css  NotificationTest.jsx  PrivateRoute.js  Register.css  Register.js
src/components/tabs/: CreateCrewTab.css  CreateCrewTab.js  CreateCrewTabDemo.css  CreateCrewTabDemo.js  HomeTab.js  MyCrewsTab.css  PrebuiltCrewsTab.css  PrebuiltCrewsTab.js  index.js
src/components/ui/: Button.css  Button.jsx  Card.css  Card.jsx  ComponentDemo.css  ComponentDemo.jsx  Form.css  Form.jsx  Input.css  Input.jsx  Label.css  Label.jsx  Modal.css  Modal.jsx  Notification.css  Spinner.css  Spinner.jsx  Toast.css  Toast.jsx  index.js
src/contexts/: AuthContext.js  NotificationContext.js
src/hooks/: useAuth.js
src/services/: firestore.js
src/vyuh/: __init__.py  agent.py  crew.py
src/vyuh/config/: agents.yaml  tasks.yaml
src/vyuh/tools/: graph_utils.py  loaders.py  orchestrator.py
