[project]
name = "vyuh"
version = "0.0.1"
description = "AI Agent System using LangChain and llmlite"
authors = [{ name = "Ishita Gupta" , email= "ishitagupta2702@gmail.com"}]
dependencies = [
    "crewai-tools[mcp]",
    "click",
    "langchain>=0.1.0",
    "opentelemetry-instrumentation-starlette",
]

[project.scripts]
identityCrew = "identityCrew:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["vyuh"]


